--- a/src/scss/theme/_type.scss
+++ b/src/scss/theme/_type.scss
@@ -6,7 +6,7 @@
 // Import fonts
 
 // @font-face {
-//   font-family: "Objective";
+//   font-family: "Theinhardt";
 //   font-weight: 400;
 //   src: url(../fonts/Objective/Objective-Regular.woff2) format("woff2"),
 //        url(../fonts/Objective/Objective-Regular.woff) format("woff");
