Fixed Header Top Bar and Header Desktop styling and theme contents.

--- a/src/scss/theme/_theme.scss
+++ b/src/scss/theme/_theme.scss
@@ -16,7 +16,7 @@
 @import "code";
 @import "custom-forms";
 @import "dropdown";
-// @import "fonts";
+@import "fonts";
 @import "forms";
 @import "grid";
 @import "images";
