--- a/src/scss/_user.scss
+++ b/src/scss/_user.scss
@@ -3,31 +3,40 @@
 // Use this to write your custom SCSS
 //
 
-#hso-logo-link {
+
+//Styling for the upper-top-bar pattern file
+#hso-logo-link a, #ot-logo-link a, #smilers-logo-link a {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#hso-logo-link a img {
     height: 30px;
     width: auto;
 
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 536px) {
         height: 18px;
         width: auto;
     }
 }
 
-#ot-logo-link {
+#ot-logo-link a img {
     height: 27px;
     width: auto;
 
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 536px) {
         height: 18px;
         width: auto;
     }
 }
 
-#smilers-logo-link {
+#smilers-logo-link a img {
     height: 35px;
     width: auto;
 
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 536px) {
         height: 20px;
         width: auto;
     }
