--- a/src/scss/_user-variables.scss
+++ b/src/scss/_user-variables.scss
@@ -6,3 +6,7 @@
 // Example of a variable override to change Incline's background color
 // Remove the "//" to comment it in and see it in action!
 // $body-bg: #12263F;
+
+.container {
+    max-width: 1380px !important;
+}
