--- a/src/scss/_user.scss
+++ b/src/scss/_user.scss
@@ -66,7 +66,33 @@
 }
 
 .site-main-nav--mobile {
+    .wp-block-navigation__responsive-dialog, .wp-block-navigation__responsive-container-content, .wp-block-navigation__responsive-container-content ul {
+        width: 100%;
+    }
+
+    .site-main-nav--mobile-link {
+        padding: 10px 25px;
+        width: 100%;
+        display: block;
+    }
+
+    .site-main-nav--mobile-link .wp-block-navigation-item__content {
+        display: block;
+        width: 100%;
+
+        span {
+            display: block;
+            padding: 15px 25px;
+            width: 100%;
+            border-radius: 0.3em;
+        }
+        &:hover span {
+            background-color: #fff;
+        }
+    }
+
     @media screen and (min-width: 800px) {
         display: none;
     }
 }
+
