--- a/src/scss/theme/_variables.scss
+++ b/src/scss/theme/_variables.scss
@@ -55,6 +55,9 @@ $ms-wires-brown: #bf311a;
 $ms-expansion-brown: #720a25;
 $infinity-violet: #bf4f99;
 
+//HSO Gradient Button Colors
+$hso-button-gradient: linear-gradient(to right, $hso-red-50, $hso-blue-50);
+
 //Philosophies Colors
 $carriere-green: #00a6a6;
 $mto-purple: #4a63e3;
