Refactored SCSS to separate files.

--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -30,4 +30,10 @@
 @import 'user/user';
 
 //Button Custom
-@import 'user/user-button'
+@import 'user/user-button';
+
+//Header-Top-Bar styling
+@import 'user/header-top-bar';
+
+//Navigation
+@import 'user/navigation';
