--- a/src/scss/user/_user-button.scss
+++ b/src/scss/user/_user-button.scss
@@ -63,4 +63,5 @@
     background-origin: border-box;
     background-clip: padding-box, border-box;
     cursor: pointer;
+    text-transform: uppercase;
   }
