Fixed all padding issues with page components.

--- a/src/scss/user/_banner-hero.scss
+++ b/src/scss/user/_banner-hero.scss
@@ -1,5 +1,6 @@
 .banner-hero--inner-content-container {
     align-items: center;
+    width: 100%;
 
     .banner-hero--left-col {
         display: flex;
