Updated footer to fix the container widths and padding.

--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -39,7 +39,7 @@
 @import 'user/navigation';
 
 //Footer
-@import 'user/footer.scss';
+@import 'user/footer';
 
 //Banner Hero
 @import 'user/banner-hero';
