--- a/src/scss/user/_footer.scss
+++ b/src/scss/user/_footer.scss
@@ -1,6 +1,6 @@
-.block-spacing-20px .wp-block-column {
+.footer-upper-cols .wp-block-column {
     @media  screen and (max-width: 830px) {
-        padding-bottom: 20px;
+        padding-bottom: 20px !important;
     }
 
     a:hover {
@@ -9,6 +9,7 @@
 }
 
 .footer-bottom-section {
+    
     @media screen and (max-width: 830px) {
         display: flex;
         flex-direction: column;
