--- a/src/scss/user/_user.scss
+++ b/src/scss/user/_user.scss
@@ -3,13 +3,13 @@
 // Use this to write your custom SCSS
 //
 
-// .header-fixed {
-//     position: fixed;
-//     top: 0;
-//     left: 0;
-//     z-index: 100;
-//     width: 100%;
-// }
+.header-fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100%;
+}
 
 //Container width 1380
 .container {
