Lot of changes to navigation.

--- a/src/scss/user/_header-top-bar.scss
+++ b/src/scss/user/_header-top-bar.scss
@@ -35,3 +35,9 @@
         width: auto;
     }
 }
+
+#brand-websites-navigation {
+    @media screen and (max-width: 660px) {
+        gap: 0.2rem;
+    }
+}
