--- a/src/scss/user/_user-button.scss
+++ b/src/scss/user/_user-button.scss
@@ -1,5 +1,13 @@
+.hso-gradient-btn {
+  width: auto;
+  height: auto;
+}
+
 .hso-gradient-btn .wp-element-button, .hso-gradient-btn .wp-block-navigation-item__content {
+    display: block;
     padding: 5px 20px;
+    width: auto !important;
+    height: auto !important;
     border: none;
     outline: none;
     position: relative;
@@ -12,6 +20,26 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    //Overrides from navigation links
+    .wp-block-navigation-item__label {
+      padding: 0 !important;
+      width: auto !important;
+      border: none !important;
+      border-radius: 0 !important;
+    }
+
+    &:hover {
+      //Overrides from navigation links
+      .wp-block-navigation-item__label {
+        padding: 5px 20px !important;
+        width: auto !important;
+        border: none !important;
+        border-radius: 0 !important;
+        background-color: inherit;
+        color: inherit;
+      }
+    }
   }
   .hso-gradient-btn .wp-element-button::before, .hso-gradient-btn .wp-block-navigation-item__content::before {
     content: "";
