--- a/src/scss/user/_navigation.scss
+++ b/src/scss/user/_navigation.scss
@@ -76,21 +76,25 @@
     //Fix some widths
     .wp-block-navigation__responsive-dialog, .wp-block-navigation__responsive-container-content, .wp-block-navigation__responsive-container-content ul {
         width: 100%;
+        padding: 10px;
     }
 
     //List item
     .site-main-nav--mobile-link {
-        padding: 10px 25px;
+        padding: 0;
+        padding-bottom: 10px;
         width: 100%;
         display: block;
         border: none;
         outline: none;
+
     }
 
     //List item - Anchor tag
     .site-main-nav--mobile-link .wp-block-navigation-item__content {
         display: block;
         width: 100%;
+        position: relative;
 
         span {
             display: block;
@@ -107,6 +111,28 @@
         &:hover span {
             background-color: #fff;
         }
+    }
+
+    .mobile-link-has-sub-menu .wp-block-navigation-submenu__toggle .wp-block-navigation-item__label::after {
+        content: "";
+        height: 10px;
+        width: 10px;
+        display: inline-block;
+        margin-left: 20px;
+        background: url("../../assets/images/navigational-icons/chevron-right.png");
+        background-size: contain;
+        background-repeat: no-repeat;
+    } 
+
+    .mobile-backlink::before {
+        content: "";
+        height: 10px;
+        width: 10px;
+        display: inline-block;
+        margin-left: 20px;
+        background: url("../../assets/images/navigational-icons/chevron-left.png");
+        background-size: contain;
+        background-repeat: no-repeat;
     }
 
     @media screen and (min-width: 800px) {
