--- a/src/scss/user/_navigation.scss
+++ b/src/scss/user/_navigation.scss
@@ -48,19 +48,6 @@
     }
 }
 
-//Mobile Nav Slide in/out animations
-
-// .wp-block-navigation.nav-top--mobile .wp-block-navigation__responsive-container {
-//     animation: slide-out 0.2s forwards;
-//         -webkit-animation: slide-out 0.2s forwards;
-// }
-
-.wp-block-navigation.nav-top--mobile .wp-block-navigation__responsive-container.is-menu-open {
-    animation: slide-in 0.3s forwards;
-    -webkit-animation: slide-in 0.3s forwards;
-  }
-
-
   //Mobile nav styling
 .site-main-nav--mobile {
 
@@ -123,6 +110,27 @@
         background-size: contain;
         background-repeat: no-repeat;
     } 
+    .mobile-link-has-sub-menu {
+        position: relative;
+    }
+
+    .mobile-link-has-sub-menu > .wp-block-navigation__submenu-container {
+        position: fixed !important;
+        width: 100% !important;
+        height: 100% !important;
+        z-index: 200;
+        top: 0 !important;
+        margin-top: 50px;
+        right: 0 !important;
+
+        li {
+            padding-bottom: 10px;
+        }
+    }
+
+    .mobile-backlink {
+        cursor: pointer;
+    }
 
     .mobile-backlink::before {
         content: "";
@@ -138,4 +146,21 @@
     @media screen and (min-width: 800px) {
         display: none !important;
     }
+}
+
+//Hacky solution to override submenu on mobile having no background
+.wp-block-navigation__responsive-container.is-menu-open .mobile-link-has-sub-menu .wp-block-navigation__submenu-container {
+    background: $gray-200 !important;
+}
+
+//Mobile Nav Slide in/out animations
+
+.nav-top--mobile .wp-block-navigation__responsive-container {
+    animation: slide-out 0.2s forwards;
+        -webkit-animation: slide-out 0.2s forwards;
+}
+
+.nav-top--mobile .wp-block-navigation__responsive-container.is-menu-open {
+    animation: slide-in 0.3s forwards;
+    -webkit-animation: slide-in 0.3s forwards;
 }
