Product Detail Image Carousel and Text section done.  Will implement scrollable on mobile once I have a slider element created.

--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -52,3 +52,6 @@
 
 //Brochure Section
 @import 'user/brochure-section';
+
+//Product Details Image Carousel
+@import 'user/product-details-image-carousel';
