--- a/src/scss/user/_header-top-bar.scss
+++ b/src/scss/user/_header-top-bar.scss
@@ -41,3 +41,9 @@
         gap: 0.2rem;
     }
 }
+
+.header-top-bar-nav {
+    @media screen and (max-width: 845px) {
+        display: none;
+    }
+}
