--- a/src/scss/user/_user.scss
+++ b/src/scss/user/_user.scss
@@ -11,6 +11,11 @@
     width: 100%;
 }
 
+:where(.wp-site-blocks *:focus) {
+    outline-width: 0 !important;
+    outline-style: none !important;
+}
+
 //Container width 1380
 .container {
     max-width: 1380px !important;
