--- a/src/scss/user/_user.scss
+++ b/src/scss/user/_user.scss
@@ -11,6 +11,14 @@
     width: 100%;
 }
 
+.absolute-bottom-center {
+    position: absolute !important;
+    bottom: 30px !important;
+    left: 0 !important;
+    right: 0 !important;
+    margin: auto;
+}
+
 :where(.wp-site-blocks *:focus) {
     outline-width: 0 !important;
     outline-style: none !important;
