--- a/src/scss/user/_swiper-customizations.scss
+++ b/src/scss/user/_swiper-customizations.scss
@@ -6,7 +6,19 @@
 
 .posts-swiper {
     li {
+        width: 100%;
         max-width: 400px;
+    }
+
+    @media screen and (min-width: 600px) {
+        .swiper-wrapper {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+        }
+
+        li {
+            width: auto !important;
+        }
     }
 }
 
