--- a/src/scss/user/_product-details-image-carousel.scss
+++ b/src/scss/user/_product-details-image-carousel.scss
@@ -9,3 +9,9 @@
 .slideshow-images img:hover {
     cursor: pointer;
 }
+
+.product-details {
+    @media screen and (max-width: 700px) {
+        flex-wrap: wrap;   
+    }
+}
