--- a/src/scss/user/_swiper-customizations.scss
+++ b/src/scss/user/_swiper-customizations.scss
@@ -30,3 +30,15 @@
         color: black;
     }
 }
+
+.product-details-swiper {
+    @media screen and (min-width: 700px) {
+        // overflow: visible;
+        width: 100%;
+    }
+    .swiper-wrapper {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        gap: 10px;
+    }
+}
