Added excerpt and category functionality to pages.

--- a/src/scss/user/_user-button.scss
+++ b/src/scss/user/_user-button.scss
@@ -19,6 +19,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-transform: uppercase;
 
     //Overrides from navigation links
     .wp-block-navigation-item__label {
