--- a/src/scss/user/_user.scss
+++ b/src/scss/user/_user.scss
@@ -54,3 +54,7 @@
     border-bottom: 2px solid $hso-blue-100 !important;
     opacity: 1;
 }
+
+button {
+    text-transform: uppercase !important;
+}
