--- a/src/scss/user/_user.scss
+++ b/src/scss/user/_user.scss
@@ -27,6 +27,9 @@
 //Container width 1380
 .container {
     max-width: 1380px !important;
+    margin: auto;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 //Color fixes from WP
