Fixed a bunch of minor issues.

--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -20,6 +20,9 @@
 // Theme variables
 @import 'theme/variables';
 
+//Bootstrap
+// @import '../../node_modules/bootstrap/scss/helpers/visually-hidden';
+
 // Bootstrap core
 // @import '../../node_modules/bootstrap/scss/bootstrap';
 
