--- a/src/scss/user/_footer.scss
+++ b/src/scss/user/_footer.scss
@@ -9,6 +9,9 @@
 }
 
 .footer-bottom-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     
     @media screen and (max-width: 830px) {
         display: flex;
@@ -20,5 +23,10 @@
 
     a:hover {
         color: $hso-blue-50 !important;
+    }
+
+    .wp-block-social-links-is-layout-flex {
+        display: flex;
+        gap: 18px;
     }
 }
