--- a/src/scss/user/_navigation.scss
+++ b/src/scss/user/_navigation.scss
@@ -5,9 +5,21 @@
 }
 
 .site-header-upper--inner-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
     @media screen and (max-width: 845px) {
         justify-content: center;
     }
+}
+
+.site-header-lower--inner-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 //Upper header nav
