--- a/src/scss/user/_user.scss
+++ b/src/scss/user/_user.scss
@@ -11,6 +11,16 @@
     width: 100%;
 }
 
+.visually-hidden {
+    clip: rect(0 0 0 0); 
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap; 
+    width: 1px;
+  }
+
 .absolute-bottom-center {
     position: absolute !important;
     bottom: 30px !important;
