CSS classes added for mobile fixes.

--- a/src/scss/user/_navigation.scss
+++ b/src/scss/user/_navigation.scss
@@ -170,7 +170,7 @@
         display: block;
         border: none;
         outline: none;
-
+        border-radius: 10px;
     }
 
     //List item - Anchor tag
