--- a/src/scss/user/_user.scss
+++ b/src/scss/user/_user.scss
@@ -11,6 +11,11 @@
     width: 100%;
 }
 
+//Fix footer margin top
+footer:has(#site-footer) {
+    margin-block-start: 0;
+}
+
 .visually-hidden {
     clip: rect(0 0 0 0); 
     clip-path: inset(50%);
@@ -95,5 +100,6 @@
 
     .mobile-text-center {
         text-align: center !important;
+        justify-content: center !important;
     }
 }
