--- a/src/scss/user/_swiper-customizations.scss
+++ b/src/scss/user/_swiper-customizations.scss
@@ -48,7 +48,7 @@
     }
     .swiper-wrapper {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
         gap: 10px;
     }
 }
