Used JS to dynamically render search bar for mobile menu on page load.

--- a/src/scss/user/_navigation.scss
+++ b/src/scss/user/_navigation.scss
@@ -162,6 +162,10 @@
         padding: 10px;
     }
 
+    .wp-block-navigation__responsive-container.is-menu-open  .site-main-nav--mobile {
+        overflow-x: hidden !important;
+    }
+
     //List item
     .site-main-nav--mobile-link {
         padding: 0;
