added a flex-start class for mobile.

--- a/src/scss/user/_user.scss
+++ b/src/scss/user/_user.scss
@@ -103,3 +103,11 @@ footer:has(#site-footer) {
         justify-content: center !important;
     }
 }
+
+@media screen and (max-width: 500px) {
+    .mobile-justify-start {
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+    }
+}
