--- a/src/scss/user/_user.scss
+++ b/src/scss/user/_user.scss
@@ -96,6 +96,7 @@ footer:has(#site-footer) {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
     }
 
     .mobile-text-center {
@@ -109,5 +110,6 @@ footer:has(#site-footer) {
         display: flex;
         flex-direction: column;
         justify-content: start;
+        align-items: start;
     }
 }
