--- a/src/scss/user/_user.scss
+++ b/src/scss/user/_user.scss
@@ -120,3 +120,16 @@ footer:has(#site-footer) {
 .links-blue a:hover {
     color: $hso-blue-50;
 }
+
+@media screen and (max-width: 700px) {
+    .mobile-2-col {
+        grid-template-columns: 1fr 1fr !important;
+        gap: 30px;
+    }
+}
+
+@media screen and (min-width: 701px) {
+    .desktop-4-col {
+        grid-template-columns: 1fr 1fr 1fr 1fr !important;
+    }
+}
