Fixed an issue with search bar id.

--- a/src/scss/user/_navigation.scss
+++ b/src/scss/user/_navigation.scss
@@ -280,7 +280,7 @@
 
 
 //Search Form in Main Navigation
-#navbar_search {
+.navbar_search {
     background-color: #fff;
     color: #000;
     border-radius: 50px;
