Random updates and fixes.

--- a/src/scss/theme/_variables.scss
+++ b/src/scss/theme/_variables.scss
@@ -55,6 +55,9 @@ $ms-wires-brown: #bf311a;
 $ms-expansion-brown: #720a25;
 $infinity-violet: #bf4f99;
 
+//Smilers
+$smilers-grey-bg: #f3f4f6;
+
 //HSO Gradient Button Colors
 $hso-button-gradient: linear-gradient(to right, $hso-red-50, $hso-blue-50);
 
