--- a/src/scss/user/_modal.scss
+++ b/src/scss/user/_modal.scss
@@ -1,4 +1,4 @@
-#contact-modal {
+#contact-modal, #student-packages-modal {
     display: none;
 }
 
@@ -12,6 +12,7 @@
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.6);
     z-index: 100;
+    margin-block-start: 0 !important;
 
     .inner-content {
         width: 80%;
