Another tiny CSS fix.

--- a/src/scss/user/_navigation.scss
+++ b/src/scss/user/_navigation.scss
@@ -66,7 +66,7 @@
         gap: 5px;
     }
 
-    .wp-block-navigation-submenu:hover, .wp-block-navigation-submenu:active, .wp-block-navigation-submenu:focus {
+    .wp-block-navigation-submenu:hover, .wp-block-navigation-submenu:active, .wp-block-navigation-submenu:focus, .nav-button:hover, .nav-button:active, .nav-button:focus {
         color: black !important;
         background-color: white;
     }
